[B]Version 1.1.106[/B]
- porntrex - fix next page
- taboofantazy - fix next page
- javhdporn - fix playback, thumbnails
- javgg - fix playback