@@ -3,3 +3,4 @@
 - taboofantazy - fix next page
 - javhdporn - fix playback, thumbnails
 - javgg - fix playback
+- javmoe - fix playback
